tests/snapshots/run_wpt_conformance__trtx_clamp_float16_2D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "clamp.https.any.js",
    "clamp float16 2D tensor default options",
    "trtx",
    "PASS",
)
