tests/snapshots/run_wpt_conformance__trtx_clamp_float16_3D_tensor_default_options_minValue_and_specified_positive_options_maxValue.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "clamp.https.any.js",
    "clamp float16 3D tensor default options.minValue and specified positive options.maxValue",
    "trtx",
    "PASS",
)
